2008-06-13  Julien Moutte  <julien@fluendo.com>

	* Makefile.am:
	* configure.ac:
	* flumotion/component/encoders/Makefile.am:
	* flumotion/component/encoders/aac/Makefile.am:
	* flumotion/component/encoders/aac/__init__.py:
	* flumotion/component/encoders/aac/aac.py:
	* flumotion/component/encoders/aac/aac.xml:
	* flumotion/component/encoders/aac/aac_wizard.py:
	* flumotion/component/muxers/flv/flv.xml:
	* flumotion/component/plugs/flashhttp/flashhttp.xml: Initial 
	import of AAC encoder component.

2008-06-04  Johan Dahlin  <johan@flumotion.com>

	* flumotion/component/encoders/flv/vp6.py:
	* flumotion/component/encoders/mp3/mp3.py:
	* flumotion/component/encoders/mp3/mp3_wizard.py:
	Update to the lastest flumotion import changes

2008-05-08  Johan Dahlin  <johan@flumotion.com>

	* flumotion/component/encoders/flv/flv_wizard.py:
	* flumotion/component/encoders/flv/vp6_wizard.py:
	* flumotion/component/encoders/mp3/mp3_wizard.py:
	glade_file -> gladeFile and section_name -> sectionName

2008-05-07  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/component/encoders/mp3/mp3.xml:
	  describe property

2008-05-06  Johan Dahlin  <johan@flumotion.com>

	* flumotion/component/encoders/flv/flv_wizard.py:
	* flumotion/component/encoders/mp3/mp3_wizard.py:
	* flumotion/component/plugs/flashhttp/flashhttp_wizard.py:
	Update to latest wizard API

2008-04-18  Johan Dahlin  <johan@flumotion.com>

	* flumotion/component/encoders/mp3/mp3_wizard.py
	(MP3Step.worker_changed.checkElements): Add a message and check for 
	lame as well
	here.

2008-04-18  Johan Dahlin  <johan@flumotion.com>

	* flumotion/component/plugs/flashhttp/flashhttp_wizard.py:
	Now when #923 is fixed, do the same here, reuse the hostname from
	the streamer

2008-04-17  Johan Dahlin  <johan@flumotion.com>

	* Makefile.am:
	* autoregen.sh:
	* pkg/debian-common/rules:
	* pkg/ubuntu-gutsy/changelog:
	* pkg/ubuntu-gutsy/control:
	Add initial ubuntu gutsy package
